--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(CUDASample)
 add_subdirectory(Sample)
 add_subdirectory(RTPServer)
 add_subdirectory(CpuEncoder)
+add_subdirectory(Camera)
