- add Gpu Video Encoder

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -5,4 +5,5 @@ add_subdirectory(CUDASample)
 add_subdirectory(Sample)
 add_subdirectory(RTPServer)
 add_subdirectory(CpuEncoder)
+add_subdirectory(GpuEncoder)
 add_subdirectory(Camera)
