--- a/modules/Camera/CMakeLists.txt
+++ b/modules/Camera/CMakeLists.txt
@@ -63,4 +63,4 @@ export(TARGETS ${PROJECT_NAME}
 
 file(APPEND
     ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
-    "set(JCY_SAMPLE_LIBRARIES \${JCY_SAMPLE_LIBRARIES} ${PROJECT_NAME})\n")
+    "set(JCY_VSSYSTEM_LIBRARIES \${JCY_VSSYSTEM_LIBRARIES} ${PROJECT_NAME})\n")
