--- a/modules/CpuEncoder/CMakeLists.txt
+++ b/modules/CpuEncoder/CMakeLists.txt
@@ -62,4 +62,4 @@ export(TARGETS
 
 file(APPEND
     ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
-    "set(JCY_CODEC_LIBRARIES \${JCY_CODEC_LIBRARIES} ${PROJECT_NAME})\n")
+    "set(JCY_VSSYSTEM_LIBRARIES \${JCY_VSSYSTEM_LIBRARIES} ${PROJECT_NAME})\n")
