--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(RTPServer)
 add_subdirectory(CpuEncoder)
 add_subdirectory(GpuEncoder)
 add_subdirectory(Camera)
+add_subdirectory(DIP)
